add generic tcp handler to library and initial binary cli code

--- a/catsploit_cli/Cargo.toml
+++ b/catsploit_cli/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "catsploit-lib"
+name = "catsploit_cli"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+catsploit_lib = { path = "../catsploit_lib" }
 log = "0.4.17"
-rand = "0.8.5"
+env_logger = "0.10.0"
