--- a/catsploit/Cargo.toml
+++ b/catsploit/Cargo.toml
@@ -10,3 +10,4 @@ catsploit_lib = { path = "../catsploit_lib" }
 log = "0.4.17"
 env_logger = "0.10.0"
 prettytable-rs = "0.10.0"
+tokio = { version = "1.25.0", features = ["full"] }
