--- a/catsploit/Cargo.toml
+++ b/catsploit/Cargo.toml
@@ -11,3 +11,6 @@ log = "0.4.17"
 env_logger = "0.10.0"
 prettytable-rs = "0.10.0"
 tokio = { version = "1.25.0", features = ["full"] }
+
+# TODO: matching todo in library Cargo.toml
+dyn-clone = "1.0.10"
