add first test, checks that handler can accept connections

--- a/catsploit_lib/Cargo.toml
+++ b/catsploit_lib/Cargo.toml
@@ -11,3 +11,7 @@ rand = "0.8.5"
 
 # TODO: below crate are probably tech debt, required for now to be able to have async pretask method on payload and clone it so that it can be sent into background to run
 dyn-clone = "1.0.10"
+
+[dev-dependencies]
+ctor = "0.1.22"
+env_logger = "0.9.0"
