update clippy cicd with manifest paths

--- a/.github/workflows/clippy.yaml
+++ b/.github/workflows/clippy.yaml
@@ -9,4 +9,8 @@ jobs:
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features
+          args: --all-features --manifest-path catsploit/Cargo.toml
+      - uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features --manifest-path catsploit_lib/Cargo.toml
