--- a/catsploit/Cargo.toml
+++ b/catsploit/Cargo.toml
@@ -2,6 +2,11 @@
 name = "catsploit"
 version = "0.1.0"
 edition = "2021"
+description = "Catsploit CLI"
+homepage = "https://github.com/tirax-lab/catsploit/tree/main/catsploit"
+repository = "https://github.com/tirax-lab/catsploit/tree/main/catsploit"
+license-file = "../LICENSE"
+readme = "../README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
