--- a/catsploit_lib/Cargo.toml
+++ b/catsploit_lib/Cargo.toml
@@ -2,6 +2,11 @@
 name = "catsploit_lib"
 version = "0.1.0"
 edition = "2021"
+description = "Catsploit library"
+homepage = "https://github.com/tirax-lab/catsploit/tree/main/catsploit_lib"
+repository = "https://github.com/tirax-lab/catsploit/tree/main/catsploit_lib"
+license-file = "../LICENSE"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
