--- a/catsploit_lib/Cargo.toml
+++ b/catsploit_lib/Cargo.toml
@@ -14,6 +14,7 @@ readme = "README.md"
 log = "0.4.17"
 rand = "0.8.5"
 dyn-clone = "1.0.10"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 
 [dev-dependencies]
 ctor = "0.1.22"
