--- a/catsploit_lib/Cargo.toml
+++ b/catsploit_lib/Cargo.toml
@@ -15,6 +15,7 @@ log = "0.4.17"
 rand = "0.8.5"
 dyn-clone = "1.0.10"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+enum-display-derive = "0.1.1"
 
 [dev-dependencies]
 ctor = "0.1.22"
